[gd_scene load_steps=3 format=3 uid="uid://eanx8lpdpjr4"]

[ext_resource type="Theme" uid="uid://c1rbyyhtqrqqt" path="res://assets/fonts/normal_font_theme.tres" id="1_o5oao"]
[ext_resource type="Script" path="res://src/game_over_statistics/GameOverStatistics.gd" id="1_sxq5r"]

[node name="GameOverStatistics" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o5oao")
script = ExtResource("1_sxq5r")

[node name="Rows" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -25.0
offset_right = 97.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HeroesSummoned" type="HBoxContainer" parent="Rows"]
layout_mode = 2

[node name="Label" type="Label" parent="Rows/HeroesSummoned"]
layout_mode = 2
text = "Heroes Summoned"

[node name="HSpacing" type="Control" parent="Rows/HeroesSummoned"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Multiplication" type="Label" parent="Rows/HeroesSummoned"]
layout_mode = 2
text = "X"

[node name="Count" type="Label" parent="Rows/HeroesSummoned"]
layout_mode = 2
text = "0"

[node name="PeasantsConscripted" type="HBoxContainer" parent="Rows"]
layout_mode = 2

[node name="Label" type="Label" parent="Rows/PeasantsConscripted"]
layout_mode = 2
text = "Peasants Conscripted"

[node name="HSpacing" type="Control" parent="Rows/PeasantsConscripted"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Multiplication" type="Label" parent="Rows/PeasantsConscripted"]
layout_mode = 2
text = "X"

[node name="Count" type="Label" parent="Rows/PeasantsConscripted"]
layout_mode = 2
text = "0"

[node name="MonstersSlain" type="HBoxContainer" parent="Rows"]
layout_mode = 2

[node name="Label" type="Label" parent="Rows/MonstersSlain"]
layout_mode = 2
text = "Monsters Slain"

[node name="HSpacing" type="Control" parent="Rows/MonstersSlain"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Multiplication" type="Label" parent="Rows/MonstersSlain"]
layout_mode = 2
text = "X"

[node name="Count" type="Label" parent="Rows/MonstersSlain"]
layout_mode = 2
text = "0"
